--- a/savings.html
+++ b/savings.html
@@ -13,28 +13,52 @@
 	<body>
 		<div data-role="page" data-theme="a">
 			<div data-role="header" data-position="inline">
-				<h1>jQuery Mobile Bootstrap Theme</h1>
+				<h1>Wish Fish...</h1>
 				<div data-role="navbar">
 					<ul>
 						<li><a href="index.html" data-icon="home" class="ui-btn-active">Home</a></li>
-						<li><a href="buttons.html" data-icon="star">Buttons</a></li>
-						<li><a href="listviews.html" data-icon="grid">Lists</a></li>
-						<li><a href="nav.html" data-icon="search">Nav</a></li>
-						<li><a href="forms.html" data-icon="gear">Forms</a></li>
+						<li><a href="buttons.html" data-icon="star">Wish List</a></li>
+						<li><a href="listviews.html" data-icon="grid">Profile</a></li>
+						<li><a href="nav.html" data-icon="search">Budget</a></li>
+						<li><a href="forms.html" data-icon="gear">Settings</a></li>
 					</ul>
 				</div>
 			</div>
 			<div data-role="content" data-theme="a">
 
-				<a href="https://github.com/commadelimited/jQuery-Mobile-Bootstrap-Theme" data-role="button" data-icon="star">Get the code</a>
+<h1>Profile Setup</h1>
 
-				<h2>Overview</h2>
+  <h3>How much do you want to save?</h3>
+  <table>
+    <tr>
+      <td>Wine</td>  
+      <td><input type="text", placeholder="$50"></td>
+    </tr>
+    
+    <tr>
+      <td>Shoes</td>
+      <td><input type="text", placeholder="$50"</td>
+    </tr>
+    
+    <tr>
+      <td>Vacay</td> 
+      <td><input type="text", placeholder="$50"</td>
+    </tr>
+  
+  </table>
+   
+		<button onclick="goToMyMocks()"> NEXT </button>
 
-				<p>
-					The jQuery Mobile Bootstrap theme is meant to duplicate the appearance of <a href="http://twbs.github.io/bootstrap/">Bootstrap</a> within the context of a jQuery Mobile application. Currently only the colors are mimiced, but eventually some of the components might also work their way into the theme.
-				</p>
+
 
 			</div>
 		</div>
+
+		<script type="text/javascript">
+		function goToMyMocks(){
+			window.location.href = "https://moqups.com/nicholesvibrantlife@gmail.com/uJ18ksMn/p:aeb4b2fdb"
+		}
+
+		</script>
 	</body>
 </html>
