--- a/savings.html
+++ b/savings.html
@@ -47,16 +47,21 @@
   
   </table>
    
-		<button onclick="goToMyMocks()"> NEXT </button>
-
-
+		<!--<button onclick="goToMyChart()"> NEXT </button>-->
+    <button onclick="goToMyChart()" class="next-button">
+      <a href="#"> NEXT </a>
+    </button>
 
 			</div>
 		</div>
 
 		<script type="text/javascript">
-		function goToMyMocks(){
-			window.location.href = "https://moqups.com/nicholesvibrantlife@gmail.com/uJ18ksMn/p:aeb4b2fdb"
+		function goToMyChart(){
+      console.log('linking')
+
+      window.location.href = "file://localhost/Users/teresahuang/Desktop/GDI/wishfish/chart.html"
+//      window.location.href = "file://localhost/Users/teresahuang/Desktop/GDI/wishfish/savings.html"
+//      window.location.href = "https://moqups.com/nicholesvibrantlife@gmail.com/uJ18ksMn/p:aeb4b2fdb"
 		}
 
 		</script>
